syntax = "proto3";
package polygon;
option go_package = "/polygon";


import "proto/polygon/hdwallet.message.proto";

service HDWallet {
  rpc CreateWallet(CreateWalletInput) returns (CreateWalletOutput);
  rpc GetBalance(GetBalanceInput) returns (GetBalanceOutput);
}